# mlops-wine-quality

./: .gitignore  README.md  pyproject.toml  tasks.py
src/alcohol_classifier/: data.py  train.py
tests/: test_data.py
